<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_dose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_dose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_dose" />

        <EditText
            android:id="@+id/edit_dose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_dose"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_water"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_water" />

        <EditText
            android:id="@+id/edit_water"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edit_water"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_tds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tds" />
        
        <EditText
            android:id="@+id/edit_tds"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/edit_tds"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_drip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_drip"
            android:onClick="onClickDrip" />

        <RadioButton
            android:id="@+id/radio_immersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_immersion"
            android:onClick="onClickImmersion" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/yield_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/label_yield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_yield" />

        <TextView
            android:id="@+id/view_yield"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/view_yield" />
    </LinearLayout>

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculateYield"
        android:text="@string/button_calculate" />

</LinearLayout>